--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,3 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.http.secret.key=${?APPLICATION_SECRET}
+hosts.allowed = ["localhost", ".local", "127.0.0.1", "ski-resort-dashboard.herokuapp.com"]
