--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,14 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.http.secret.key=${?APPLICATION_SECRET}
 play.filters.hosts.allowed = ["localhost", ".local", "127.0.0.1", "ski-resort-dashboard.herokuapp.com"]
+slick.dbs.default {
+  profile = "slick.jdbc.PostgresProfile$"
+  db {
+    driver = "org.postgresql.Driver"
+    url="jdbc:postgresql://127.0.0.1:5432/ski_resort_dashboard"
+    user=skidashboard
+    password=skidashboard
+    numThreads=2
+    maxConnections=2
+  }
+}
