Updating Config To Work With Heroku Database

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,9 +5,8 @@ slick.dbs.default {
   profile = "slick.jdbc.PostgresProfile$"
   db {
     driver = "org.postgresql.Driver"
-    url="jdbc:postgresql://127.0.0.1:5432/ski_resort_dashboard"
-    user=skidashboard
-    password=skidashboard
+    url="jdbc:postgresql://127.0.0.1:5432/ski_resort_dashboard?password=skidashboard&user=skidashboard"
+    url=${?JDBC_DATABASE_URL}
     numThreads=2
     maxConnections=2
   }
