Adding in Database Drivers and Access Objects (#5)
* Fixing the allowed hosts config

* Adding Dependencies For Getting Data

* Testing web scraping library

* Adding setup instruction to Readme

* Adding Data Structures To Store Scraped Data

* Parsing Out Daily Snow and Base

* Adding Database Drivers and Configuration

* Renaming and Updating Models To For DB

* Injected DAO to controller and saving data with it

* Created DAO to save and get data from DB

* Updating Config To Work With Heroku Database

* Merge with Main branch

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,13 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.http.secret.key=${?APPLICATION_SECRET}
 play.filters.hosts.allowed = ["localhost", ".local", "127.0.0.1", "ski-resort-dashboard.herokuapp.com"]
+slick.dbs.default {
+  profile = "slick.jdbc.PostgresProfile$"
+  db {
+    driver = "org.postgresql.Driver"
+    url="jdbc:postgresql://127.0.0.1:5432/ski_resort_dashboard?password=skidashboard&user=skidashboard"
+    url=${?JDBC_DATABASE_URL}
+    numThreads=2
+    maxConnections=2
+  }
+}
