--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,9 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    environment: 
+      name: release-pipeline
+      url: https://ski-resort-dashboard.herokuapp.com/
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -26,7 +29,7 @@ jobs:
             [
               '+([0-9])?(.{+([0-9]),x}).x',
               'main', 
-              'next', 
+              'next',
               'next-major', 
               {
                 name: 'beta', 
@@ -41,7 +44,7 @@ jobs:
             @semantic-release/changelog@6.0.1
             @semantic-release/git@10.0.1
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       - name: Print Results
         if: steps.semantic.outputs.new_release_published == 'true'
         run: |
